rename expiration to exhaustion where appropriate
initialCreditsExhaustionQueue and ExhaustedInitialCreditsEventRequest;